src/main/resources/api/exchange_modules/fd98f1cf-31e0-4618-ab8d-ddb9983647fa/common-lib/1.0.0/examples/error/429.raml
#%RAML 1.0 NamedExample
code: "429"
message: "Quota exceeded, requests are blocked until the current window finishes"
